2004-11-18 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: disallow TAB characters under windows since it
	causes a crash most of the time.
	* modules/bitlog.cc, modules/bytelog.cc, modules/ttoken.cc,
	modules/makefile.mingw: These were not getting built under windows.
	* plat/win32/gpsim.nsi: added pthreadVC.dll to gpsim's windows binary
	distribution.
	* doc/gpsimWin32.html: Updated documentation for pthreads.
	
2004-11-17 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/value.cc, src/value.h: made Integer,Float
	and Boolean values get() and set() their values through just one
	member function. This allows derived attributes to trap reads and
	writes to the values.
	
2004-11-16 Scott Dattalo <scott@dattalo.com>
	* src/value.h, src/value.cc, src/processor.h, src/processor.cc,
	src/pic-processor.cc, src/symbol.h, src/symbol.cc: Added 3 new
	attributes: SafeMode, WarnMode, and UnknownMode to control the
	simulator's behavior under certain simulation conditions. Attribute
	handling has also been enhanced.
	* cli/parse.yy, cli/cmd_help.cc, cli/cmd_help.h: Help command
	will display information about attributes.
	
2004-11-15 Scott Dattalo <scott@dattalo.com>
	* src/ioports.h, src/ioports.cc, src/16bit-registers.cc: Beginning
	to redesign I/O ports.

2004-11-14 Scott Dattalo <scott@dattalo.com>
	* src/i2c-ee.cc, src/ioports.cc, src/ioports.h, src/stimuli.cc,
	src/uart.cc: The usart has bitrotted. The relatively recent I/O pin
	changes broke this and probably other peripherals too.
	* modules/Makefile.am: added new files.
	* modules/pthread-wrap.h, modules/ttoken.cc, modules/ttoken.h:
	The token class provides co-routine support for modules.
	* modules/bitlog.cc, modules/bitlog.h, modules/bytelog.cc,
	modules/bytelog.h: Bit and Byte event loggers. bitlog was originally
	part of the uart module.
	* modules/usart.cc, modules/usart.h: removed the bit logger class and
	am now making an attempt to resurrect this code. 
