@@ -1,3 +1,7 @@
+2004-11-19 Scott Dattalo <scott@dattalo.com>
+	* gui/gui_breadboard.cc: Don't let modules open a closed breadboard 
+	window.
+	
 2004-11-18 Scott Dattalo <scott@dattalo.com>
 	* cli/input.cc: disallow TAB characters under windows since it
 	causes a crash most of the time.
